# delta-struct-rs

./: Cargo.toml  README.md
delta-struct/: Cargo.toml
delta-struct-macros/: Cargo.toml
delta-struct-macros/src/: lib.rs
delta-struct/src/: lib.rs
