[package]
name = "delta-struct-macros"
version = "0.1.0"
authors = ["jacobkiesel <jacob.kiesel@vivint.com>"]
edition = "2018"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
