[package]
name = "delta-struct"
version = "0.1.0"
authors = ["jacobkiesel <jacob.kiesel@vivint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delta-struct-macros = { version = "0.1.0", path = "../delta-struct-macros"  }
