[package]
name = "delta-struct"
version = "0.1.0"
authors = ["jacobkiesel <jacob.kiesel@vivint.com>"]
edition = "2018"
repository = "https://github.com/vivint-smarthome/delta-struct-rs"
license = "MIT OR Apache-2.0"
description = "Delta struct provides a rust-lang Deriveable trait, Delta, that can be used to compute the difference (aka delta) between two instances of a type."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delta-struct-macros = { version = "0.1.0", path = "../delta-struct-macros"  }
